Initial commit: working Django budget tracker with dashboard

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -28,7 +28,11 @@
     {% endif %}
     <li class="nav-item">
         <a class="nav-link" href="#">Privacy</a>
+{% if user.is_authenticated %}
+    <li class="nav-item">
+        <a class="nav-link" href="{% url 'budget_dashboard' %}">Budget Dashboard</a>
     </li>
+{% endif %}
 </ul>
             <ul class="navbar-nav ms-auto">
                 {% if user.is_authenticated %}
